// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "id": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
  "incentivesData": Array [
    Object {
      "asset": Object {
        "emissionPerSecond": 0,
        "id": "0xd800e97ae32b06c1e89ca5126c7bf6aef89d6b240xd800e97ae32b06c1e89ca5126c7bf6aef89d6b24",
        "index": 0,
      },
      "lastUpdateTimestamp": 1641228846,
      "lifetimeRewards": "1545.269812517967062645",
      "reward": "1545.269812517967062645",
    },
  ],
  "loansData": Array [
    Object {
      "bidBorrowAmount": "0",
      "bidPrice": "0",
      "bidStartTimestamp": "0",
      "bidderAddress": "0x00",
      "borrower": "0x20000b9b01e93a39db9d286e9264eff7f2af16e9",
      "currentAmount": "2.096644626429035316",
      "currentAmountETH": "2.096644626429035316",
      "currentAmountUSD": "3500.9331258879",
      "healthFactor": "0.02129116181030162794",
      "id": "50xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
      "lastUpdateTimestamp": 1641216645,
      "loanId": "5",
      "nftAsset": Object {
        "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642218270,
        "name": "Wrapped Cryptopunks",
        "symbol": "WPUNKS",
        "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
      },
      "nftTokenId": "1337",
      "reserveAsset": Object {
        "decimals": 18,
        "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642311951,
        "name": "Wrapped Ether",
        "symbol": "WETH",
        "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
      },
      "scaledAmount": "2012908826592418942",
      "state": "Active",
    },
  ],
  "nftsData": Array [
    Object {
      "nftAsset": Object {
        "id": "0x74e4418a41169fb951ca886976ccd8b36968c4ab0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642218270,
        "name": "Wrapped Cryptopunks",
        "symbol": "WPUNKS",
        "underlyingAsset": "0x74e4418a41169fb951ca886976ccd8b36968c4ab",
      },
      "totalCollateral": "3",
      "underlyingCollateralETH": "0.1488",
      "underlyingCollateralUSD": "248.4631122344",
    },
  ],
  "reservesData": Array [
    Object {
      "reserve": Object {
        "decimals": 18,
        "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
        "lastUpdateTimestamp": 1642159201,
        "name": "Wrapped Ether",
        "symbol": "WETH",
        "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
      },
      "scaledBTokenBalance": "1.119602730417571034",
      "scaledVariableDebt": "2.012908826592418942",
      "totalBorrows": "2.096644626429035316",
      "totalBorrowsETH": "2.096644626429035316",
      "totalBorrowsUSD": "3500.9331258879",
      "underlyingBalance": "1.159297638269989947",
      "underlyingBalanceETH": "1.159297638269989947",
      "underlyingBalanceUSD": "1935.770828028",
      "variableBorrowIndex": "1.01007509787777865131",
    },
  ],
  "totalBorrowsETH": "4.193289252858070632",
  "totalBorrowsUSD": "7001.8662517758",
  "totalCollateralETH": "0.1488",
  "totalCollateralUSD": "248.4631122344",
  "totalLiquidityETH": "1.159297638269989947",
  "totalLiquidityUSD": "1935.770828028",
  "totalRewards": "1545.269812517967062645",
}
`;

exports[`computations and formattings formatReserves should allow omitting timestamp 1`] = `
Object {
  "availableLiquidity": "30.176110452260548839",
  "avg30DaysLiquidityRate": undefined,
  "avg30DaysVariableBorrowRate": undefined,
  "bTokenAddress": "0x1bbce5469b8bcc5078ae2398476350936d1393af",
  "baseVariableBorrowRate": "0",
  "borrowingEnabled": true,
  "debtTokenAddress": "0xe42f3a56f89546a2596b88cff08234c5eea304b7",
  "decimals": 18,
  "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1642159201,
  "liquidityIndex": "1.03541834282012424654",
  "liquidityRate": "0.54998284644218217077",
  "name": "Wrapped Ether",
  "optimalUtilisationRate": "650000000000000000000000000",
  "price": Object {
    "priceInEth": "1",
  },
  "reserveFactor": "0.1",
  "supplyAPR": "0.54998284644218217077",
  "supplyAPY": "0.73322327835433494494",
  "symbol": "WETH",
  "totalDebt": "198.982640816212378612",
  "totalLiquidity": "229.158751268472927451",
  "totalScaledVariableDebt": "191.044198058136805282",
  "totalVariableDebt": "198.982640816212378612",
  "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
  "utilizationRate": "0.86831787882755800028",
  "variableBorrowAPR": "0.70376536807873714367",
  "variableBorrowAPY": "1.02134950518465855846",
  "variableBorrowIndex": "1.04155291204216429422",
  "variableBorrowRate": "0.70376536807873714367",
  "variableRateSlope1": "80000000000000000000000000",
  "variableRateSlope2": "1000000000000000000000000000",
}
`;

exports[`computations and formattings formatReserves should return plausible results 1`] = `
Object {
  "availableLiquidity": "30.176110452260548839",
  "avg30DaysLiquidityRate": undefined,
  "avg30DaysVariableBorrowRate": undefined,
  "bTokenAddress": "0x1bbce5469b8bcc5078ae2398476350936d1393af",
  "baseVariableBorrowRate": "0",
  "borrowingEnabled": true,
  "debtTokenAddress": "0xe42f3a56f89546a2596b88cff08234c5eea304b7",
  "decimals": 18,
  "id": "0xad1908f909b5c5d2b1032a215d611773f26f089f0xe55870ebb007a50b0dfabadb1a21e4bfcee5299b",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1642159201,
  "liquidityIndex": "1.03541834282012424654",
  "liquidityRate": "0.54998284644218217077",
  "name": "Wrapped Ether",
  "optimalUtilisationRate": "650000000000000000000000000",
  "price": Object {
    "priceInEth": "1",
  },
  "reserveFactor": "0.1",
  "supplyAPR": "0.54998284644218217077",
  "supplyAPY": "0.73322327835433494494",
  "symbol": "WETH",
  "totalDebt": "198.991522108389090691",
  "totalLiquidity": "229.16763256064963953",
  "totalScaledVariableDebt": "191.044198058136805282",
  "totalVariableDebt": "198.991522108389090691",
  "underlyingAsset": "0xad1908f909b5c5d2b1032a215d611773f26f089f",
  "utilizationRate": "0.86832298211103444039",
  "variableBorrowAPR": "0.70376536807873714367",
  "variableBorrowAPY": "1.02134950518465855846",
  "variableBorrowIndex": "1.04155291204216429422",
  "variableBorrowRate": "0.70376536807873714367",
  "variableRateSlope1": "80000000000000000000000000",
  "variableRateSlope2": "1000000000000000000000000000",
}
`;
